[package]
name = "attack-path"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cnapp-core = { workspace = true }
shared-types = { workspace = true }
attack-graph = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
